<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="30dp"
        android:id="@+id/username"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:paddingBottom="10dp"
        android:src="@drawable/user_image_r"
        android:layout_gravity="center_horizontal"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:background="#42a5f5"
        android:text="@string/user_info_card"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/loading"
        android:id="@+id/user_info_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:background="#42a5f5"
        android:text="@string/setting_card"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:padding="5dp"
            android:layout_marginLeft="60dp"
            android:textSize="15dp"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification_switch"
            android:padding="5dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:background="#42a5f5"
        android:text="@string/product_related_card"/>

    <Button
        android:id="@+id/show_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_and_feedback"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/show_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_terms"
        style="?android:attr/borderlessButtonStyle" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="45dp"
                  android:paddingRight="45dp"
                  android:paddingBottom="10dp"
                  android:orientation="vertical" >
    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42a5f5"
        android:text="@string/log_out"
        android:layout_gravity="center_vertical|center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        />
    </LinearLayout>

</LinearLayout>